--- a/css/reset.scss
+++ b/css/reset.scss
@@ -19,7 +19,7 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 16px;
+  font-size: get-vw(16px);
   font-family: 'SpoqaHanSansNeo', "돋움", Dotum, Arial, sans-serif;
   font-weight:400;
   font-style:normal;
