--- a/css/ui.scss
+++ b/css/ui.scss
@@ -86,7 +86,10 @@
     }
   }
   .cont{
-    margin:0 auto
+    margin:0 auto;
+    .cont_tit{
+      font-size:28px;
+    }
   }
 }
 @media all and (min-width: 1321px) {
@@ -98,7 +101,7 @@
 @media all and (min-width: 961px) and (max-width:1320px) {
   .cont{
     width:100%;
-    padding:60px 48px 44px;
+    padding:60px 48px 110px;
   }
 }
 
@@ -210,7 +213,6 @@
     a{
       display:block;
       text-align: left;
-      font-size:16px;
       color:#0D0D0D;
     }
     .date{
@@ -461,6 +463,7 @@
   }
 }
 .btn-p{
+  display:inline-block;
   width:100%;
   height:get-vw(52px);
   background:#00498C;
@@ -472,6 +475,7 @@
 }
 @media all and (min-width: 961px){
   .bbs_detail{
+    margin-top:40px;
     .top{
       .info{
         display:flex;
@@ -479,6 +483,43 @@
           margin-left:50px;
         }
       }
+      span, em{
+        font-size:16px;
+      }
     }
+    .bbs-view-content{
+      padding:60px 0 60px;
+    }
+  }
+  .bbs-more{
+    li{
+      display:flex;
+      justify-content: left;
+      align-items: center;
+      position:relative;
+      padding:28px 60px 28px 0;
+      + li {
+        border-top:1px solid #E8E8E8;
+      }
+      span{
+        display:inline-block;
+        flex-shrink: 0;
+        width:120px;
+        text-align: center;
+      }
+      &::after{
+        width:16px;
+        height:16px;
+        right:30px;
+      }
+    }
+  }
+  .btn-area{
+    margin-top:50px;
+  }
+  .btn-p{
+    width:312px;
+    height:60px;
+    line-height:60px;
   }
 }
