--- a/css/ui.scss
+++ b/css/ui.scss
@@ -251,6 +251,9 @@
   .cont{
     width:1200px;
     padding:80px 0 110px;
+    &.pd-rl-20{
+      padding:80px 0 110px;
+    }
   }
 }
 @media all and (min-width: 961px) and (max-width:1320px) {
@@ -1198,36 +1201,38 @@
     .desc{
       margin-top:get-vw(8px);
       font-size:(14px);
+      color:#777;
     }
   }
 }
 @media all and (min-width: 961px) {
+  .black-quotes{
+    margin:40px 0 20px;
+    img{
+      width:17px;
+    }
+  }
+  .sub-desc{
+    font-size:24px;
+  }
   .ak-value-list{
-    margin-top:get-vw(20px);
+    display:flex;
+    margin:25px -15px;
     li{
-      text-align:center;
+      width:33.33%;
+      padding:15px;
       &+li{
-        margin-top:get-vw(12px);
-      }
-      .img-wrap{
-        display:block;
-        img{
-          width:100%;
-          height:auto;
-        }
+        margin-top:0;
       }
       .inner{
-        border:1px solid #E8E8E8;
-        border-top:none;
-        padding:get-vw(24px) get-vw(20px) get-vw(28px);
+        padding:28px 20px 40px;
       }
       .tit{
-        font-weight:500;
-        font-size:get-vw(19px);
+        font-size:24px;
       }
       .desc{
-        margin-top:get-vw(8px);
-        font-size:(14px);
+        margin-top:8px;
+        font-size:16px;
       }
     }
   }
