--- a/css/ui.scss
+++ b/css/ui.scss
@@ -229,6 +229,7 @@
             a {
               display: flex;
               height: 74px;
+              padding:0 32px;
               line-height: 74px;
               font-size: 18px;
               font-weight: 400;
@@ -1205,7 +1206,7 @@
   }
 }
 @media all and (min-width: 961px) {
-  .black-quotes{
+  .quotes{
     margin:40px 0 20px;
     img{
       width:17px;
@@ -1236,6 +1237,7 @@
     }
   }
 }
+
 .value-talent{
   .visual-wrap{
     width:100%;
@@ -1250,7 +1252,53 @@
       color:#43C9FB;
     }
   }
+  .desc-wrap{
+    text-align:center;
+    .quotes{
+      margin:get-vw(40px) 0 get-vw(20px);
+    }
+    .tit{
+      font-size:get-vw(19px);
+      color:#00498C
+    }
+    p{
+      margin-top:get-vw(15px);
+      font-size:get-vw(16px);
+      color:#454545;
+    }
+  }
 }
-.blue-quotes{
-  filter: invert(16%) sepia(59%) saturate(4260%) hue-rotate(194deg) brightness(91%) contrast(106%);
-}
+@media all and (min-width: 961px) {
+  .value-talent{
+    position:relative;
+    .visual-wrap{
+      height:580px;
+      padding-top:72px;
+      padding-left:80px;
+      span{
+        font-size:60px;
+      }
+    }
+    .desc-wrap{
+      position: absolute;
+      bottom:70px;
+      left:80px;
+      text-align:left;
+      .quotes{
+        margin:0 0 12px;
+        filter: brightness(50);
+        text-align:left;
+      }
+      .tit{
+        font-size:24px;
+        color:#FFFFFF;
+      }
+      p{
+        margin-top:16px;
+        font-size:18px;
+        color:#FFFFFF;
+        opacity: 0.55;
+      }
+    }
+  }
+ }
