--- a/css/ui.scss
+++ b/css/ui.scss
@@ -1452,3 +1452,223 @@
     }
   }
 }
+.ceo-message{
+  text-align: center;
+  .cont_tit{
+    padding:get-vw(45px) get-vw(24px) 0;
+    font-weight:300;
+    font-size:get-vw(20px);
+    letter-spacing: -0.03em;
+    em{
+      font-weight:700;
+      font-size:inherit;
+    }
+  }
+  .ceo-img-wrap{
+    position:relative;
+    width:100%;
+    height:auto;
+    margin-top:get-vw(40px);
+    &::after{
+      content:'';
+      display:block;
+      position: absolute;
+      top:calc(50% - get-vw(10px));
+      left:0;
+      right:0;
+      bottom:0;
+      background: #F3F4F6;
+      z-index:-1;
+    }
+    .img-wrap{
+      display: block;
+      width:get-vw(190px);
+      margin:0 auto;
+      img{
+        width:100%;
+        height:auto;
+      }
+    }
+    .name{
+      margin-top:get-vw(10px);
+      font-size:get-vw(14px);
+      em{
+        margin:0 4px;
+        font-weight:700;
+        font-size:get-vw(16px);
+      }
+    }
+  }
+  .desc{
+    position:relative;
+    padding:get-vw(73px) get-vw(24px) get-vw(50px);
+    background-color:#F3F4F6;
+    font-size:get-vw(16px);
+    color:#454545;
+    text-align:left;
+    &::before{
+      content: '';
+      display:block;
+      position:absolute;
+      top:get-vw(45px);
+      left:get-vw(24px);
+      right:get-vw(24px);
+      border-top:1px solid #0D0D0D;
+    }
+  }
+}
+.message-list{
+  padding:get-vw(50px) get-vw(17px) get-vw(50px) get-vw(24px);
+  li + li{
+    margin-top:get-vw(30px);
+  }
+  .tit{
+    font-weight: 500;
+    font-size:get-vw(19px);
+    color:#00498C;
+  }
+  .desc{
+    font-size:get-vw(16px);
+    color:#454545;
+    word-break: keep-all;
+  }
+}
+.catchphrase{
+  width:100%;
+  padding:get-vw(55px) 0;
+  text-align: center;
+  background: #00498C;
+  img{
+    width:get-vw(182px);
+    height:auto;
+  }
+}
+@media all and (min-width: 961px) {
+  .ceo-message{
+    position: relative;
+    width:1200px;
+    margin:80px auto 0;
+    text-align: left;
+    .cont_tit{
+      padding:0;
+      font-size:36px;
+    }
+    .ceo-img-wrap{
+      position:absolute;
+      width:345px;
+      height:470px;
+      margin-top:0;
+      top:0;
+      right:0;
+      &::after{
+        content:'';
+        display:block;
+        position: absolute;
+        top:35px;
+        left:35px;
+        right:0;
+        bottom:0;
+        background: #F3F4F6;
+        z-index:-1;
+      }
+      .img-wrap{
+        display: block;
+        width:310px;
+        margin:0;
+        img{
+          width:100%;
+          height:auto;
+        }
+      }
+      .name{
+        margin-top:8px;
+        padding-right:30px;
+        font-size:16px;
+        text-align: right;
+        em{
+          font-size:18px;
+        }
+      }
+    }
+    .desc{
+      position:relative;
+      padding:81px 0 0;
+      background-color:transparent;
+      font-size:18px;
+      color:#454545;
+      text-align:left;
+      &::before{
+        content: '';
+        display:block;
+        position:absolute;
+        top:40px;
+        left:0;
+        right:auto;
+        width:92px;
+        border-top:1px solid #0D0D0D;
+      }
+    }
+  }
+  .message-list{
+    padding:100px 0;
+    margin-top:114px;
+    background:#F3F4F6;
+    ul{
+      position: relative;
+      width:1200px;
+      margin:0 auto;
+      &:after{
+        content:'';
+        display:block;
+        position: absolute;
+        top:-100px;
+        bottom:-100px;
+        left:226px;
+        border-left:1px solid #E8E8E8;
+      }
+    }
+    li{
+      display:flex;
+      position: relative;
+      justify-content: flex-start;
+      &::before{
+        content:'';
+        display:block;
+        position: absolute;
+        top:14px;
+        left:224px;
+        width:5px;
+        height:5px;
+        border-radius: 50%;
+        background: #00498C;
+        z-index: 2;
+      }
+    }
+    li + li{
+      margin-top:80px;
+    }
+    .tit{
+      display:block;
+      flex-shrink: 0;
+      width:226px;
+      font-weight: 500;
+      font-size:24px;
+      color:#00498C;
+    }
+    .desc{
+      padding-left:42px;
+      font-size:18px;
+      color:#454545;
+      word-break: keep-all;
+    }
+  }
+  .catchphrase{
+    padding:100px 0;
+    img{
+      width:598px;
+      height:auto;
+    }
+  }
+}
+@media all and (min-width: 961px) {}
+@media all and (min-width: 961px) {}
