--- a/css/ui.scss
+++ b/css/ui.scss
@@ -1670,5 +1670,86 @@
     }
   }
 }
-@media all and (min-width: 961px) {}
+.contact-ir{
+  text-align:left;
+  .inner{
+    width:get-vw(312px);
+    height:get-vw(170vw);
+    padding:get-vw(66px) get-vw(20px) 0;
+    background:url("../images/img_ir_contact.png") no-repeat 50% 50%;
+    background-size: cover;
+    .quotes{
+      margin:0;
+      margin-bottom:get-vw(10px);
+      text-align: left;
+    }
+    .desc{
+      font-size:get-vw(15px);
+    }
+  }
+  .ir-phone{
+    li{
+      display:flex;
+      justify-content: space-between;
+      align-items: center;
+      height:get-vw(62px);
+      border-bottom:1px solid #E8E8E8;
+      .tit{
+        font-weight:700;
+        font-size:get-vw(14px);
+        color:#08A2DC;
+      }
+      .number{
+        font-weight:700;
+        font-size:get-vw(20px);
+        color:#00498C;
+      }
+    }
+  }
+}
+@media all and (min-width: 961px) {
+  .contact-ir{
+    position: relative;
+    .inner{
+      width:100%;
+      height:500px;
+      padding:135px 80px 0;
+      .quotes{
+        margin:0;
+        margin-bottom:12px;
+        text-align: left;
+      }
+      .desc{
+        font-weight:300;
+        font-size:24px;
+      }
+    }
+    .ir-phone{
+      display:flex;
+      position: absolute;
+      bottom:70px;
+      left:80px;
+      li{
+        display:block;
+        width:280px;
+        height:170px;
+        padding:28px 0 0 36px;
+        border-bottom:none;
+        background: #FFFFFF;
+        .tit{
+          display:block;
+          font-size:16px;
+        }
+        .number{
+          display:block;
+          margin-top:48px;
+          font-size:33px;
+        }
+        & + li{
+          margin-left:5px;
+        }
+      }
+    }
+  }
+}
 @media all and (min-width: 961px) {}
